<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_passwords"/>

            <TextView
                android:id="@+id/lblPwdNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/digit_one"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/skbPwdNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="1" />
        
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legnth_of_passwords"/>

            <TextView
                android:id="@+id/lblPwdLen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/digit_six"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/skbPwdLen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="24"
            android:progress="6" />

        <Button
            android:id="@+id/btnGen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:onClick="generate" />
    </LinearLayout>

    <ListView
        android:id="@+id/lstPwds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>